UI bug fixed for history export

--- a/src/components/admin-panel/components/data-upload/components/document-upload/index.css
+++ b/src/components/admin-panel/components/data-upload/components/document-upload/index.css
@@ -223,6 +223,11 @@
     padding: 10px;
 }
 
+.previously-uploaded-documents-container p {
+    width: 95%;
+    height: 60px;
+}
+
 .previously-uploaded-documents-container::-webkit-scrollbar {
     display: none;
 }
